--- a/index.html
+++ b/index.html
@@ -8,3 +8,24 @@
 
 <main id="main">
   <h1 id="title">Project Gallery</h1>
+
+  <section>
+    <h1>Projects</h1>
+    <div class="container">
+      <div class="item" id="1">
+        
+        <div class="text">
+          <h3>PROJECT 1</h4>
+          <p>Short Description</p>
+        </div>
+        <div class="button">Learn More</div>
+      </div>
+
+      <div class="item" id="2">
+       
+        <div class="text">
+          <h3>PROJECT 2</h4>
+          <p>Short Description</p>
+        </div>
+        <div class="button">Learn More</div>
+      </div>
