--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-
+//This us an HTML doc
 <head>
   <title>Project Gallery</title>
   <link rel="stylesheet" type="text/css" href="CSS/style.css">
