--- a/index.html
+++ b/index.html
@@ -45,3 +45,13 @@
         </div>
         <div class="button">Learn More</div>
       </div>
+
+    <div id="CounterVisitor">
+          <span class="counter-item">0</span>
+          <span class="counter-item">0</span>
+          <span class="counter-item">1</span>
+          <span class="counter-item">1</span>
+          <span class="counter-item">8</span>
+          <span class="counter-item">4</span>
+</div>
+
